--- a/templates/group.conf.erb
+++ b/templates/group.conf.erb
@@ -6,7 +6,7 @@
     scope.function_validate_string([if_mac])
     scope.function_validate_re([if_mac, '^[A-Fa-f0-9:.]+$'])
   -%>
-group <%= title %> {
+group <%= name %> {
 FIXME: for loop for hosts goes here
 <%
   options = data.fetch('options', nil) || @global_options
