--- a/templates/host.conf.erb
+++ b/templates/host.conf.erb
@@ -1,3 +1,6 @@
+# This file is managed by puppet
+group <%= name %> {
+
 <%- @hash_data.sort.each do |host, data|
   scope.function_validate_hash([data]) 
   raise Puppet::ParseError, "Missing interfaces hash for host '#{host}'" unless data.has_key? 'interfaces' 
@@ -6,14 +9,14 @@
     scope.function_validate_string([if_mac])
     scope.function_validate_re([if_mac, '^[A-Fa-f0-9:.]+$'])
  -%>
-host <%= host %>-<%= if_name %> {
-  hardware ethernet <%= if_mac %>;
+  host <%= host %> {
+    hardware ethernet <%= if_mac %>;
 <%
   fixed_address = data.fetch('fixed_address', nil) || host
   scope.function_validate_string([fixed_address])
   scope.function_validate_re([fixed_address, '^\S+$'])
  -%>
-  fixed-address <%= fixed_address %>;
+    fixed-address <%= fixed_address %>;
 <%
   options = data.fetch('options', nil) || @global_options
   scope.function_validate_array([options])
@@ -24,3 +27,4 @@ host <%= host %>-<%= if_name %> {
 }
 <% end -%>
 <% end -%>
+}
