--- a/templates/host.conf.erb
+++ b/templates/host.conf.erb
@@ -1,7 +1,7 @@
 # This file is managed by puppet
 
 group <%= @name %> {
-  <% if @global_optionsi -%>
+  <% if @global_options -%>
   <%= @global_options.join(";\n") %>;
 <% end %>
 
