host template blerarhg

--- a/templates/host.conf.erb
+++ b/templates/host.conf.erb
@@ -20,10 +20,10 @@ group <%= @name %> {
     fixed-address <%= fixed_address %>;
     <% end -%>
 <% options = data.fetch('options', nil) -%>
-
+<% if options -%>
 <% options.each do |option| -%>
   <%= option %>;
-
+<% end -%>
 <% end -%>
   }
 <% end -%>
